--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <select name="selection" id="selection">
           <option value="architecture">Architecture</option>
           <option value="blackandwhite">Black and White</option>
-          <option value="ocean">Ocean Scenery</option>
           <option value="landscape">Landscapes</option>
+          <option value="ocean">Ocean</option>
         </select>
       </form>
       <div id="images">
