--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
     <main>
       <header>
         <h1>Stock Photography Generator</h1>
-        <p>C/O Flickr API</p>
       </header>
       <form action="">
         <label for="selection">Choose a Subject</label>
@@ -77,4 +76,10 @@
     <!-- JS -->
     <script type="text/javascript" src="./dist/js/app.js"></script>
   </body>
+  <footer>
+    <p class="credit">
+      Images c/o <a href="https://www.flickr.com/services/api/">Flickr</a>
+    </p>
+    <p>&copy 2020 Noel Thomson</p>
+  </footer>
 </html>
