--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </body>
   <footer>
     <p class="credit">
-      Images c/o <a href="https://www.flickr.com/services/api/">Flickr</a>
+      Images c/o <a href="https://www.flickr.com/services/api/">Flickr API</a>
     </p>
     <p>&copy 2020 Noel Thomson</p>
   </footer>
