--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
     ></script>
   </head>
   <body>
+    <header>
+      <h1>Stock Photography Generator</h1>
+    </header>
     <main>
-      <header>
-        <h1>Stock Photography Generator</h1>
-      </header>
       <form action="">
         <label for="selection">Choose a Subject</label>
         <select name="selection" id="selection">
           <option value="architecture">Architecture</option>
-          <option value="blackandwhite">Black and White</option>
+          <option value="black and white">Black and White</option>
           <option value="landscape">Landscapes</option>
           <option value="ocean">Ocean</option>
         </select>
@@ -78,7 +78,7 @@
   </body>
   <footer>
     <p class="credit">
-      Images c/o <a href="https://www.flickr.com/services/api/">Flickr API</a>
+      Images c/o <a href="https://www.pexels.com/api/">Pexels API</a>
     </p>
     <p>&copy 2020 Noel Thomson</p>
   </footer>
