--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
     <header>
       <h1>Stock Photography Generator</h1>
       <form action="" id="searchForm">
-        <input type="text" id="searchText" placeholder="Search For Images" />
+        <input
+          type="text"
+          id="searchText"
+          placeholder="Search For Images"
+          autocomplete="off"
+        />
       </form>
       <p>
         <span>Suggested: </span>
