--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </head>
   <body>
     <header>
-      <h1>Lightning Photography</h1>
+      <h1>Photography Generator</h1>
       <form action="" id="searchForm">
         <input
           type="text"
